--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,22 +3,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+<!--管理员登录-->
     <servlet>
-        <servlet-name>JsonDataServlet</servlet-name>
-        <servlet-class>com.petplatform.controllor.JsonDataServlet</servlet-class>
+        <servlet-name>form_ad_login</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_ad_login</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>JsonDataServlet</servlet-name>
-        <url-pattern>/data</url-pattern>
+        <servlet-name>form_ad_login</servlet-name>
+        <url-pattern>/form_ad_login</url-pattern>
     </servlet-mapping>
+<!--用户登录-->
     <servlet>
-        <servlet-name>form_enroll</servlet-name>
-        <servlet-class>com.petplatform.controllor.form_enroll</servlet-class>
+        <servlet-name>form_user_login</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_user_login</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>form_enroll</servlet-name>
-        <url-pattern>/form_enroll</url-pattern>
+        <servlet-name>form_user_login</servlet-name>
+        <url-pattern>/form_user_login</url-pattern>
     </servlet-mapping>
+<!--用户注册-->
+    <servlet>
+        <servlet-name>form_user_enroll</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_user_enroll</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_user_enroll</servlet-name>
+        <url-pattern>/form_user_enroll</url-pattern>
+    </servlet-mapping>
+<!--宠物列表增删改-->
     <servlet>
         <servlet-name>form_pet_add</servlet-name>
         <servlet-class>com.petplatform.controllor.form_pet_add</servlet-class>
@@ -43,6 +55,56 @@
         <servlet-name>form_pet_edit</servlet-name>
         <url-pattern>/form_pet_edit</url-pattern>
     </servlet-mapping>
+<!--员工列表增删改-->
+    <servlet>
+        <servlet-name>form_stuff_add</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_stuff_add</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_stuff_add</servlet-name>
+        <url-pattern>/form_stuff_add</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>form_stuff_delete</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_stuff_delete</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_stuff_delete</servlet-name>
+        <url-pattern>/form_stuff_delete</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>form_stuff_edit</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_stuff_edit</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_stuff_edit</servlet-name>
+        <url-pattern>/form_stuff_edit</url-pattern>
+    </servlet-mapping>
+<!--任务列表增删改-->
+    <servlet>
+        <servlet-name>form_task_add</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_task_add</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_task_add</servlet-name>
+        <url-pattern>/form_task_add</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>form_task_delete</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_task_delete</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_task_delete</servlet-name>
+        <url-pattern>/form_task_delete</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>form_task_edit</servlet-name>
+        <servlet-class>com.petplatform.controllor.form_task_edit</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>form_task_edit</servlet-name>
+        <url-pattern>/form_task_edit</url-pattern>
+    </servlet-mapping>
 <!--获取宠物动态列表-->
     <servlet>
         <servlet-name>table_pet_consult</servlet-name>
@@ -52,7 +114,8 @@
         <servlet-name>table_pet_consult</servlet-name>
         <url-pattern>/table_pet_consult</url-pattern>
     </servlet-mapping>
-<servlet>
+<!--获取员工动态列表-->
+    <servlet>
         <servlet-name>table_stuff_consult</servlet-name>
         <servlet-class>com.petplatform.controllor.table_stuff_consult</servlet-class>
     </servlet>
@@ -60,12 +123,22 @@
         <servlet-name>table_stuff_consult</servlet-name>
         <url-pattern>/table_stuff_consult</url-pattern>
     </servlet-mapping>
+<!--获取任务动态列表-->
     <servlet>
         <servlet-name>table_task_consult</servlet-name>
-        <servlet-class>com.petplatform.controllor.table_stuff_consult</servlet-class>
+        <servlet-class>com.petplatform.controllor.table_task_consult</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>table_task_consult</servlet-name>
         <url-pattern>/table_task_consult</url-pattern>
+    </servlet-mapping>
+<!--获取用户动态列表-->
+    <servlet>
+        <servlet-name>table_user_consult</servlet-name>
+        <servlet-class>com.petplatform.controllor.table_user_consult</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>table_user_consult</servlet-name>
+        <url-pattern>/table_user_consult</url-pattern>
     </servlet-mapping>
 </web-app>
