增加一部分删改方法

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -70,7 +70,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>form_stuff_delete</servlet-name>
-        <url-pattern>/form_stuff_delete</url-pattern>
+        <url-pattern>/form_stuff_delete/*</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>form_stuff_edit</servlet-name>
