--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -95,7 +95,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>form_task_delete</servlet-name>
-        <url-pattern>/form_task_delete</url-pattern>
+        <url-pattern>/form_task_delete/*</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>form_task_edit</servlet-name>
